--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
    "dependencies": {
     "bcryptjs": "^2.4.3",
     "bson": "^4.6.4",
-	"mysql2": "^2.3.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "2.0.7",	
+    "nodemon": "2.0.7",
+	   "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2"
   },
   "engines": {
